# hpuz

./: INSTALL  LICENSE  LICENSE.MIT  TODO  hpuz.cabal  puz.cabal
Codec/Game/: Puz.hs
Codec/Game/Puz/: Internal.chs
contrib/libpuz/: AUTHORS  NEWS  README
contrib/libpuz/include/: puz.h
contrib/libpuz/src/: cksum.c  load.c  puzzle.c  save.c
