Name:                hpuz
Version:             0.0.1.1
Cabal-Version:       >=1.2
Build-Type:          Simple
License:             MIT
License-file:        LICENSE
Copyright:           Copyright (c) Chris Casinghino 2009
Author:              Chris Casinghino
Maintainer:          chris.casinghino@gmail.com

Stability:           Experimental
Synopsis:            Haskell bindings for libpuz
Tested-With:         GHC >= 6.10.3
-- Extra-Source-Files:  INSTALL
Description: {
Provides support for reading and writing the .puz crossword puzzle 
format from haskell.
}

Library
  Build-Depends:     base, bytestring >= 0.9, array
  Exposed-modules:   Codec.Game.Puz
  Other-modules:     Codec.Game.Puz.Internal
  build-tools:       c2hs >= 0.16.0
  extra-libraries:   puz
  ghc-options:       -Wall
